2002-10-29  Akim Demaille  <akim@epita.fr>

	* lib/autom4te.in (Autoconf): s/automate/autom4te/.
	Reported by Ralf Corsepius.

2002-10-29  Akim Demaille  <akim@epita.fr>

	* lib/m4sugar/m4sh.m4 (_AS_QUOTE): The warning about quoted
	characters is a back as an `obsolete' warning now.
	Reported by Ralf Corsepius.

2002-10-28  Akim Demaille  <akim@epita.fr>

	* configure.ac: Bumpto 2.54c.

2002-10-28  Akim Demaille  <akim@epita.fr>

	Version 2.54b.

	* tests/foreign.at (Libtool): Adjust to broken libtoolize.

2002-10-28  Akim Demaille  <akim@epita.fr>

	* tests/atspecific.m4 (AT_CHECK_AUTOM4TE): Be robust to different
	m4 executable names, and different GNU M4 version.
	Reported by Ezra Peisach and Paul Jarc.

2002-10-27  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/functions.m4 (_AC_FUNC_VFORK): Really use
	AC_RUN_IFELSE.

2002-10-27  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi: More AC_MSG_FAILURE promotion.
	* lib/autoconf/fortran.m4 (_AC_F77_NAME_MANGLING):
	Die when a simple Fortran program cannot be compiled.
	* lib/autoconf/lang.m4 (AC_LANG_CALL, AC_LANG_FUNC_LINK_TRY):
	Issue a warning if no function is given.

2002-10-27  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Run Time): Document AC_RUN_IFELSE.
	Move the documentation of AC_TRY_RUN to...
	(Obsolete Macros): here.
	Adjust all the old samples still using AC_TRY_RUN to AC_RUN_IFELSE.
	(autoconf Invocation): Remove the duplicates with `invoking
	autom4te'.
	* lib/autoconf/headers.m4 (AC_HEADER_STDC): Don't use AC_TRY_RUN.
	* lib/autoconf/c.m4 (AC_C_BIGENDIAN): Likewise.

2002-10-27  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Generating Sources): Document AC_LANG_CALL
	and AC_LANG_FUNC_LINK_TRY.
	(Examining Libraries): Rename as...
	(Running the Linker): this.
	Document AC_LINK_IFELSE.
	Move the documentation of AC_TRY_LINK and AC_TRY_LINK_FUNC to...
	(Obsolete Macros): here.
	* lib/autoconf/fortran.m4 (_AC_F77_NAME_MANGLING): Don't use
	AC_TRY_LINK_FUNC nor AC_TRY_LINK.