@@ -1,11 +1,12 @@
-.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.29.
-.TH AUTORECONF "1" "October 2002" "autoreconf 2.54c" "User Commands"
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.013.
+.TH AUTORECONF "1" "October 2002" "GNU Autoconf 2.54c" FSF
 .SH NAME
-autoreconf \- Update generated configuration files
+autoreconf \- manual page for autoreconf 2.54c
 .SH SYNOPSIS
 .B autoreconf
 [\fIOPTION\fR] ... [\fICONFIGURE-AC or DIRECTORY\fR] ...
 .SH DESCRIPTION
+.PP
 Run `autoconf' (and `autoheader', `aclocal', `automake', `autopoint'
 (formerly `gettextize'), and `libtoolize' where appropriate)
 repeatedly to remake the GNU Build System files in the DIRECTORIES or
@@ -37,6 +38,37 @@ copy missing auxiliary files
 .TP
 \fB\-s\fR, \fB\-\-symlink\fR
 with \fB\-i\fR, install symbolic links instead of copies
+.TP
+\fB\-W\fR, \fB\-\-warnings\fR=\fICATEGORY\fR
+report the warnings falling in CATEGORY [syntax]
+.SS "Warning categories include:"
+.TP
+`cross'
+cross compilation issues
+.TP
+`obsolete'
+obsolete constructs
+.TP
+`portability'
+portability issues
+.TP
+`syntax'
+dubious syntactic constructs
+.TP
+`all'
+all the warnings
+.TP
+`no-CATEGORY'
+turn off the warnings on CATEGORY
+.TP
+`none'
+turn off all the warnings
+.TP
+`error'
+warnings are error
+.PP
+The environment variable `WARNINGS' is honored.  Some subtools might
+support other warning types, using `all' is encouraged.
 .SS "Library directories:"
 .TP
 \fB\-B\fR, \fB\-\-prepend\-include\fR=\fIDIR\fR
@@ -47,12 +79,6 @@ append directory DIR to search path
 .PP
 The environment variables AUTOCONF, AUTOHEADER, AUTOMAKE, ACLOCAL,
 AUTOPOINT, LIBTOOLIZE are honored.
-.SH AUTHOR
-Written by David J. MacKenzie and Akim Demaille.
-.PP
-Copyright 2002 Free Software Foundation, Inc.
-This is free software; see the source for copying conditions.  There is NO
-warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .SH "REPORTING BUGS"
 Report bugs to <bug-autoconf@gnu.org>.
 .SH "SEE ALSO"
@@ -78,3 +104,8 @@ programs are properly installed at your site, the command
 .B info autoreconf
 .PP
 should give you access to the complete manual.
+.PP
+Copyright 2002 Free Software Foundation, Inc.
+.br
+This is free software; see the source for copying conditions.  There is NO
+warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
